--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "assignment-1",
+  "name": "burger",
   "version": "1.0.0",
-  "description": "Module 3",
+  "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
